// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.content - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          actions={Object {}}
          blockId="areas.content_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "areas.content",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.footer - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          actions={Object {}}
          blockId="areas.footer_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "areas.footer",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.header - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          actions={Object {}}
          blockId="areas.header_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "areas.header",
    },
    Object {},
  ],
]
`;

exports[`Mock render - areas.sider - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="areas.sider_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="areas.sider_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "areas.sider",
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <LayoutBlock
          actions={Object {}}
          blockId="default_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.content.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.content.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.content.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.content.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.footer.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.footer.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.footer.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.footer.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.color: #4432a8  - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.header.color: #4432a8 _sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.header.color: #4432a8 _layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.color: #4432a8 ",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.header.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.header.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.header.theme: light - dark is default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.header.theme: light - dark is default_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.header.theme: light - dark is default_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.header.theme: light - dark is default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.main.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.main.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.main.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.main.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.sider.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.sider.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={
            Object {
              "style": Object {
                "border": "5px solid blue",
              },
            }
          }
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.sider.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.sider.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.sider.theme: light - dark is default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.sider.theme: light - dark is default_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={
            Object {
              "theme": "light",
            }
          }
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.sider.theme: light - dark is default_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-vooagt",
      "id": "properties.sider.theme: light - dark is default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style: border: 5px solid blue - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <React.Fragment>
        <SiderBlock
          actions={Object {}}
          blockId="properties.style: border: 5px solid blue_sider"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          rename={
            Object {
              "actions": Object {
                "onClose": "onSiderClose",
                "onOpen": "onSiderOpen",
              },
              "methods": Object {
                "setOpen": "setSiderOpen",
                "toggleOpen": "toggleSiderOpen",
              },
            }
          }
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
        <LayoutBlock
          actions={Object {}}
          blockId="properties.style: border: 5px solid blue_layout"
          content={
            Object {
              "content": [Function],
            }
          }
          list={Array []}
          menus={Array []}
          methods={
            Object {
              "callAction": [Function],
              "makeCssClass": [Function],
              "registerAction": [Function],
              "registerMethod": [Function],
              "safelyCallMethod": [Function],
            }
          }
          properties={Object {}}
          required={false}
          user={Object {}}
          validation={
            Object {
              "errors": Array [],
              "status": null,
              "warnings": Array [],
            }
          }
        />
      </React.Fragment>,
      "className": "css-1mli136",
      "id": "properties.style: border: 5px solid blue",
    },
    Object {},
  ],
]
`;
